Revert "[Android] update UI"
This reverts commit 7227d8f7489c1a6907df8955d072a28bcbe80511.

--- a/android_client/res/layout/activity_account.xml
+++ b/android_client/res/layout/activity_account.xml
@@ -90,7 +90,7 @@
 
             <TextView
                 android:id="@+id/balance_val"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="2dip"
@@ -98,13 +98,20 @@
                 android:text="10000.0"
                 android:textColor="#000"
                 android:textSize="15sp" />
-            
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:id="@+id/availableRel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/balanceRel"
+            android:clickable="true"
+            android:gravity="center_vertical" >
+
             <TextView
                 android:id="@+id/available_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dip"
-                android:layout_toRightOf="@id/balance_val"
                 android:padding="8dp"
                 android:text="可用金额："
                 android:textColor="#000"
@@ -126,7 +133,7 @@
             android:id="@+id/marginRel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/balanceRel"
+            android:layout_below="@id/availableRel"
             android:clickable="true"
             android:gravity="center_vertical" >
 
@@ -141,7 +148,7 @@
 
             <TextView
                 android:id="@+id/margin_val"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="2dip"
@@ -149,14 +156,20 @@
                 android:text="10000.0"
                 android:textColor="#000"
                 android:textSize="15sp" />
-            
+        </RelativeLayout>     
+         
+        <RelativeLayout
+            android:id="@+id/forzenMarginRel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/marginRel"
+            android:clickable="true"
+            android:gravity="center_vertical" >
+
             <TextView
                 android:id="@+id/forzenMargin_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="2dip"
-                android:layout_toRightOf="@id/margin_val"
                 android:padding="8dp"
                 android:text="冻结保证金："
                 android:textColor="#000"
@@ -172,13 +185,13 @@
                 android:text="10000.0"
                 android:textColor="#000"
                 android:textSize="15sp" />
-        </RelativeLayout>     
+        </RelativeLayout>  
                  
         <RelativeLayout
             android:id="@+id/commissionRel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/marginRel"
+            android:layout_below="@id/forzenMarginRel"
             android:clickable="true"
             android:gravity="center_vertical" >
 
@@ -193,7 +206,7 @@
 
             <TextView
                 android:id="@+id/commission_val"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="2dip"
@@ -201,14 +214,20 @@
                 android:text="10000.0"
                 android:textColor="#000"
                 android:textSize="15sp" />
-            
+        </RelativeLayout>  
+     
+        <RelativeLayout
+            android:id="@+id/forzenCommissionRel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/commissionRel"
+            android:clickable="true"
+            android:gravity="center_vertical" >
+
             <TextView
                 android:id="@+id/forzenCommission_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="2dip"
-                android:layout_toRightOf="@id/commission_val"
                 android:padding="8dp"
                 android:text="冻结手续费："
                 android:textColor="#000"
@@ -224,13 +243,13 @@
                 android:text="10000.0"
                 android:textColor="#000"
                 android:textSize="15sp" />
-        </RelativeLayout>  
+        </RelativeLayout> 
         
         <RelativeLayout
             android:id="@+id/positionRel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/commissionRel"
+            android:layout_below="@id/forzenCommissionRel"
             android:clickable="true"
             android:gravity="center_vertical" >
 
