--- a/android_client/res/layout/activity_account.xml
+++ b/android_client/res/layout/activity_account.xml
@@ -330,34 +330,49 @@
 
     </RelativeLayout>
     
-    <Button
-        android:id="@+id/CheckMessage"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_title"
-        android:padding="3dp"
-        android:text="查看消息"
-        android:textColor="#ffffff"
-        android:textSize="15sp" />
+	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" >
+	 <RadioGroup android:id="@+id/autoRadioGroup" android:contentDescription="Automatic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+	    <RadioButton android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/semiAuto" android:text="半自动" ></RadioButton>
+	    <RadioButton android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/totalAuto" android:text="全自动" android:checked="true"></RadioButton>    
+	 </RadioGroup>
+ 	 <RadioGroup android:id="@+id/tickRadioGroup" android:contentDescription="TickNeeded" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+	    <RadioButton android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/KLine" android:text="无Tick" ></RadioButton>
+	    <RadioButton android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/TickAndKLine" android:text="有Tick" android:checked="true"></RadioButton>    
+	 </RadioGroup>
+	</LinearLayout>
     
-    <Button
-        android:id="@+id/ReleaseCtp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_title"
-        android:padding="3dp"
-        android:text="关闭CTP账户"
-        android:textColor="#ffffff"
-        android:textSize="15sp" />
-
-    <Button
-        android:id="@+id/LogOut"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_title"
-        android:padding="3dp"
-        android:text="退出"
-        android:textColor="#ffffff"
-        android:textSize="15sp" />
-
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" >    
+	    <Button
+	        android:id="@+id/CheckMessage"
+	        android:layout_width="0dp"
+	        android:layout_weight="1"
+	        android:layout_height="wrap_content"
+	        android:background="@drawable/bg_tab"
+	        android:padding="3dp"
+	        android:text="查看消息"
+	        android:textColor="#ffffff"
+	        android:textSize="15sp" />
+	    
+	    <Button
+	        android:id="@+id/ReleaseCtp"
+	        android:layout_width="0dp"
+	        android:layout_weight="2"
+	        android:layout_height="wrap_content"
+	        android:background="@drawable/bg_tab"
+	        android:padding="3dp"
+	        android:text="关闭CTP账户"
+	        android:textColor="#ffffff"
+	        android:textSize="15sp" />
+	
+	    <Button
+	        android:id="@+id/LogOut"
+	        android:layout_width="0dp"
+	        android:layout_weight="1"
+	        android:layout_height="wrap_content"
+	        android:background="@drawable/bg_tab"
+	        android:padding="3dp"
+	        android:text="退出"
+	        android:textColor="#ffffff"
+	        android:textSize="15sp" />
+	</LinearLayout>
 </LinearLayout>
