[Android] add filter for order prompt

--- a/android_client/res/layout/activity_listview.xml
+++ b/android_client/res/layout/activity_listview.xml
@@ -33,6 +33,14 @@
             android:checked="true"
             android:text="撤单" >
         </CheckBox>
+        
+        <CheckBox
+            android:id="@+id/Prompt_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="提醒" >
+        </CheckBox>
     </LinearLayout>
 
     <ListView
